Capturing the client's IP and started adding some documentation as examples for adamclmns to get started

--- a/omniscient.cabal
+++ b/omniscient.cabal
@@ -27,6 +27,7 @@ library
                         text,
                         containers,
                         aeson,
+                        network,
                         servant,
                         servant-server,
                         transformers,
