--- a/omniscient.cabal
+++ b/omniscient.cabal
@@ -16,11 +16,11 @@ library
     hs-source-dirs:     src
     default-language:   Haskell2010
     exposed-modules:    Omniscient,
-                        Omniscient.Server
-    other-modules:      Omniscient.Server.API,
+                        Omniscient.Server,
+                        Omniscient.Server.API,
                         Omniscient.Server.Types,
                         Omniscient.Server.Models
-    ghc-options:        -Wall -ddump-deriv
+    ghc-options:        -Wall
     build-depends:      base >= 4.7 && < 5,
                         time,
                         free,
@@ -54,7 +54,21 @@ test-suite omniscient-test
     ghc-options:        -threaded -rtsopts -with-rtsopts=-N
     default-language:   Haskell2010
     build-depends:      base,
-                        omniscient
+                        omniscient,
+                        time,
+                        free,
+                        text,
+                        containers,
+                        aeson,
+                        network,
+                        servant,
+                        servant-server,
+                        transformers,
+                        mtl,
+                        persistent,
+                        persistent-template,
+                        persistent-sqlite,
+                        monad-logger
 
 source-repository head
   type:     git
