I got tired of the warning about using a partial type signature, so I hid it

--- a/omniscient.cabal
+++ b/omniscient.cabal
@@ -20,7 +20,7 @@ library
                         Omniscient.Server.API,
                         Omniscient.Server.Types,
                         Omniscient.Server.Models
-    ghc-options:        -Wall
+    ghc-options:        -Wall -Wno-partial-type-signatures
     build-depends:      base >= 4.7 && < 5,
                         time,
                         free,
