I really should have done smaller commits, but I'm successfully using esqueleto now, and have started implementing the actual queries

--- a/omniscient.cabal
+++ b/omniscient.cabal
@@ -35,6 +35,7 @@ library
                         persistent,
                         persistent-template,
                         persistent-sqlite,
+                        esqueleto,
                         monad-logger,
                         wai,
                         warp
