added hspec to test dependencies

--- a/omniscient.cabal
+++ b/omniscient.cabal
@@ -69,7 +69,8 @@ test-suite omniscient-test
                         persistent,
                         persistent-template,
                         persistent-sqlite,
-                        monad-logger
+                        monad-logger,
+                        hspec
 
 source-repository head
   type:     git
