Cleaned up tests a bit, preparing to add other tests

--- a/omniscient.cabal
+++ b/omniscient.cabal
@@ -69,6 +69,7 @@ test-suite omniscient-test
                         persistent,
                         persistent-template,
                         persistent-sqlite,
+                        esqueleto,
                         monad-logger,
                         hspec
 
